---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "const _ : .. 2 := 'c'"
---
"_"@(FileId(1), 6..7) [ConstVar(Const, No)]: range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 18..21): mismatched types
| note for (FileId(1), 18..21): this is of type `char`
| note for (FileId(1), 10..14): this is of type `2 .. {unknown}`
| info: `char` is not assignable into `2 .. {unknown}`
